--- a/public/sass/partial/_base.scss
+++ b/public/sass/partial/_base.scss
@@ -38,3 +38,8 @@ input:-moz-placeholder {
     color: #fff;
     background-color: #222;
 }
+/*pre {
+    background-color: transparent;
+    border: none;
+    padding: 0; 
+}*/
