--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,13 @@
     <div id="footer">
-        <p>&#64;Proudly Presented By A Silly Man</p>
+        <p>&#64;Proudly Presented By ShinyLee</p>
         <div id="back-top" style="display: none;"><p>返回</p><p>顶部</p></div>
     </div>
     <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/javascripts/main.js"></script>
+    <script src="//cdn.bootcss.com/spin.js/2.3.2/spin.min.js"></script>
+    <script src="/js/highlight.pack.js"></script>
+    <script src="/js/main.js"></script>
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    </script>
   </body>
 </html>
